test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_baseline_test_old.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:c0b87413da2969ce2f7aa449319bcce22494e3c11000f028248374ebf0a04a2d
size 5587
